--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,8 @@ jobs:
         run: cat $GITHUB_EVENT_PATH
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          submodules: true
       - name: Setup Go ${{ matrix.go-version }}
         uses: actions/setup-go@v3
         with:
